<?xml version="1.0" encoding="utf-8"?>
<!-- Long-press the app icon: the two things people do most. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scan"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutShortLabel="@string/shortcut_scan_short"
        android:shortcutLongLabel="@string/shortcut_scan_long">
        <intent
            android:action="com.leaf.app.action.SCAN"
            android:targetPackage="com.plainpdf.app"
            android:targetClass="com.leaf.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="open"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_open"
        android:shortcutShortLabel="@string/shortcut_open_short"
        android:shortcutLongLabel="@string/shortcut_open_long">
        <intent
            android:action="com.leaf.app.action.OPEN"
            android:targetPackage="com.plainpdf.app"
            android:targetClass="com.leaf.app.MainActivity" />
    </shortcut>
</shortcuts>
